@@ -50,6 +50,8 @@ By this new addon I changed a few things.
 * convert dvd to a h264 container. 
 * convert bluray to a mkv container.
 * convert dvd to a mkv container.
+* convert dvd to iphone compatible format.
+* convert dvd to psp compatible format. 
 * In a later release I plan to work  some of this features over the network. 
 
 
