@@ -229,5 +229,7 @@
         <string id="33328">Cette fonctionnalité de transcodage a besoin de makemkv !</string>        
         <string id="33329">Aucune connexion possible avec le maître réseau !</string>
         <string id="33330">Aucune connexion du client n'a été effectuée !</string>
+        <string id="33331">Répertoire IPHONE non trouvé ou non inscriptible !</string> 
+        <string id="33332">Répertoire PSP non trouvé ou non inscriptible !</string>  
                
  </strings>
