@@ -229,6 +229,8 @@
         <string id="33327">Ausführen von setup.sh um SSH-Verzeichniss zu erzeugen !</string>  
         <string id="33328">Diese Trancode-Funktion benötigt makemkv !</string>
         <string id="33329">Keine Verbindung zum Netzwerk Master möglich !</string>
-        <string id="33330">Keine Verbindung durch eine Client erstellt !</string>       
+        <string id="33330">Keine Verbindung durch eine Client erstellt !</string> 
+        <string id="33331">IPHONE-Verzeichniss nicht gefunden oder beschreibbar !</string> 
+        <string id="33332">PSP-Verzeichniss nicht gefunden oder beschreibbar !</string>      
  
  </strings>
